.opsera-fm1/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fm1
  labels:
    app: fm1
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: fm1
